--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "input": "./gallery",
   "output": "./build_output",
-  "title": "Photo Gallery",
+  "title": "Galeri Rentek SDBMJB",
   "sort-albums-by": "title",
   "sort-media-by": "filename",
   "download-photos": "copy",
   "cleanup": true,
-  "theme": "cards",
+  "theme": "mosaic",
   "css": "./custom.css",
-  "footer": "Copyright Text",
+  "footer": "Courtesy of SDBMJB",
   "usage-stats": false
 }
